RESOLVED FIXED225996
[GPUProcess] It is not safe to call GraphicsContext::paintFrameForMedia() off the main thread
https://bugs.webkit.org/show_bug.cgi?id=225996
Summary [GPUProcess] It is not safe to call GraphicsContext::paintFrameForMedia() off...
Chris Dumez
Reported 2021-05-19 17:05:22 PDT
It is not safe to call GraphicsContext::paintFrameForMedia() off the main thread in the GPUProcess. It relies on the MediaPlayer which is a main-thread object.
Attachments
Patch (5.68 KB, patch)
2021-05-19 17:09 PDT, Chris Dumez
no flags
Chris Dumez
Comment 1 2021-05-19 17:09:38 PDT
EWS
Comment 2 2021-05-19 22:05:28 PDT
Committed r277774 (237935@main): <https://commits.webkit.org/237935@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 429114 [details].
Radar WebKit Bug Importer
Comment 3 2021-05-19 22:06:39 PDT
Note You need to log in before you can comment on or make changes to this bug.